# Eddog

./: .gitmodules
eddog_controller/: CMakeLists.txt
eddog_controller/Scripts/RobotController/: RestController.py
eddog_description/: CMakeLists.txt
eddog_description/config/: display.rviz
eddog_description/launch/: display.launch.py
eddog_description/model/ground_plane/: model.config
eddog_description/src/: fake_oden.py
eddog_description/urdf/: _d415.urdf.xacro  eddog_gazebo.xacro  eddog_joints.xacro
eddog_description/world/: contact.world
eddog_msgs/: CMakeLists.txt  package.xml
eddog_teleop/: CMakeLists.txt  package.xml
eddog_teleop/src/: eddog_definitions.py  joystick.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/eddog_controller/share/eddog_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eddog_description/share/eddog_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/eddog_description/share/eddog_description/cmake/: eddog_descriptionConfig.cmake
install/eddog_description/share/eddog_description/config/: eddog_controller.yaml
install/eddog_description/share/eddog_description/launch/: gazebo.launch.py  gazebo_allpkgs.launch.py
install/eddog_description/share/eddog_description/meshes/: body.stl  foot.stl
install/eddog_msgs/share/eddog_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eddog_teleop/share/eddog_teleop/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
(+110 files in other folders)
